force-app/main/default/objects/SAP_Product__c/SAP_Product__c.object-meta.xml
<CustomObject>
    <label>SAP Product</label>
    <nameField>
        <label>SAP Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>