force-app/main/default/objects/SAP_Product__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Mapping__c</referenceTo>
    <relationshipLabel>SAP Product</relationshipLabel>
    <relationshipName>SAP_Product</relationshipName>
    <type>Lookup</type>
</CustomField>