force-app/main/default/objects/SAP_Product__c/fields/BREIT__c.field-meta.xml
<CustomField>
    <fullName>BREIT__c</fullName>
    <description>宽度</description>
    <label>BREIT</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>