force-app/main/default/objects/SAP_Product__c/fields/BRGEW__c.field-meta.xml
<CustomField>
    <fullName>BRGEW__c</fullName>
    <description>毛重</description>
    <label>BRGEW</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>