force-app/main/default/objects/SAP_Product__c/fields/EAN11__c.field-meta.xml
<CustomField>
    <fullName>EAN11__c</fullName>
    <description>国际文件号(EAN/UPC)</description>
    <label>EAN11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>