force-app/main/default/objects/SAP_Product__c/fields/External_key__c.field-meta.xml
<CustomField>
    <fullName>External_key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>外键  销售组织 + 客户型号（ZCUSTOMER）</description>
    <externalId>true</externalId>
    <label>External key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>