force-app/main/default/objects/SAP_Product__c/fields/GEWEI__c.field-meta.xml
<CustomField>
    <fullName>GEWEI__c</fullName>
    <description>重量单位</description>
    <label>GEWEI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>