force-app/main/default/objects/SAP_Product__c/fields/GROES__c.field-meta.xml
<CustomField>
    <fullName>GROES__c</fullName>
    <description>大小/量纲</description>
    <label>GROES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>