force-app/main/default/objects/SAP_Product__c/fields/GSBER__c.field-meta.xml
<CustomField>
    <fullName>GSBER__c</fullName>
    <description>业务范围</description>
    <label>GSBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>