force-app/main/default/objects/SAP_Product__c/fields/Hisense_Entity__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Entity__c</fullName>
    <label>Hisense Entity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>