force-app/main/default/objects/SAP_Product__c/fields/HOEHE__c.field-meta.xml
<CustomField>
    <fullName>HOEHE__c</fullName>
    <description>高度</description>
    <label>HOEHE</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>