force-app/main/default/objects/SAP_Product__c/fields/LAENG__c.field-meta.xml
<CustomField>
    <fullName>LAENG__c</fullName>
    <description>长度</description>
    <label>LAENG</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>