force-app/main/default/objects/SAP_Product__c/fields/MATKL__c.field-meta.xml
<CustomField>
    <fullName>MATKL__c</fullName>
    <description>物料组</description>
    <label>MATKL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>