force-app/main/default/objects/SAP_Product__c/fields/MEABM__c.field-meta.xml
<CustomField>
    <fullName>MEABM__c</fullName>
    <description>长度/宽度/高度的尺寸单位</description>
    <label>MEABM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>