force-app/main/default/objects/SAP_Product__c/fields/NTGEW__c.field-meta.xml
<CustomField>
    <fullName>NTGEW__c</fullName>
    <description>净重</description>
    <label>NTGEW</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>