force-app/main/default/objects/SAP_Product__c/fields/NUMTP__c.field-meta.xml
<CustomField>
    <fullName>NUMTP__c</fullName>
    <description>国际商品编码的类别 (EAN)</description>
    <label>NUMTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>