force-app/main/default/objects/SAP_Product__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <referenceTo>Mapping__c</referenceTo>
    <relationshipLabel>SAP Product (Product Line)</relationshipLabel>
    <relationshipName>SAP_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>