force-app/main/default/objects/SAP_Product__c/fields/VOLEH__c.field-meta.xml
<CustomField>
    <fullName>VOLEH__c</fullName>
    <description>体积单位</description>
    <label>VOLEH</label>
    <length>10</length>
    <type>Text</type>
</CustomField>