force-app/main/default/objects/SAP_Product__c/fields/VOLUM__c.field-meta.xml
<CustomField>
    <fullName>VOLUM__c</fullName>
    <description>业务量</description>
    <label>VOLUM</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>