force-app/main/default/objects/SAP_Product__c/fields/ZBRAND__c.field-meta.xml
<CustomField>
    <fullName>ZBRAND__c</fullName>
    <description>品牌</description>
    <label>ZBRAND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>