force-app/main/default/objects/SAP_Product__c/fields/ZDATE__c.field-meta.xml
<CustomField>
    <fullName>ZDATE__c</fullName>
    <description>导出日期</description>
    <label>ZDATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>