force-app/main/default/objects/SAP_Product__c/fields/ZMMDTYPE__c.field-meta.xml
<CustomField>
    <fullName>ZMMDTYPE__c</fullName>
    <description>产品品种</description>
    <label>ZMMDTYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>