force-app/main/default/objects/SAP_Product__c/fields/ZNJWJ__c.field-meta.xml
<CustomField>
    <fullName>ZNJWJ__c</fullName>
    <description>内机/外机</description>
    <label>ZNJWJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>