force-app/main/default/objects/SAP_Product__c/fields/ZPMTMODEL__c.field-meta.xml
<CustomField>
    <fullName>ZPMTMODEL__c</fullName>
    <description>推广型号</description>
    <label>ZPMTMODEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>