force-app/main/default/objects/SAP_Product__c/fields/ZTYPEDSCEN__c.field-meta.xml
<CustomField>
    <fullName>ZTYPEDSCEN__c</fullName>
    <description>英文描述</description>
    <label>ZTYPEDSCEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>