force-app/main/default/objects/SAP_Product__c/fields/ZZPRODH1__c.field-meta.xml
<CustomField>
    <fullName>ZZPRODH1__c</fullName>
    <description>产品层次 1</description>
    <label>ZZPRODH1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>