force-app/main/default/objects/SAP_Product__c/fields/ZZPRODH2__c.field-meta.xml
<CustomField>
    <fullName>ZZPRODH2__c</fullName>
    <description>产品层次2</description>
    <label>ZZPRODH2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>