force-app/main/default/objects/SAP_Product__c/fields/ZZPRODH3__c.field-meta.xml
<CustomField>
    <fullName>ZZPRODH3__c</fullName>
    <description>产品层次 3</description>
    <label>ZZPRODH3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>